tests/NormalTests/paczka1/small_fuzzy/29185242.err
Error in line 2: fn098m S460 60,9
Error in line 4: fn098m S680 6,1
Error in line 14: 4Nd4WXL S680 58,5
